nsqd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nsqd-service
spec:
  type: NodePort
  selector:
    app: nsqd
  ports:
    - protocol: TCP
      port: 4150
      targetPort: 4150
      name: tcp
    - protocol: TCP
      port: 4151
      targetPort: 4151
      name: http
