nsqdadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nsqdadmin-service
spec:
  type: NodePort
  selector:
    app: nsqdadmin
  ports:
    - protocol: TCP
      port: 4171
      targetPort: 4171
