nsqlookupd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nsqlookupd-service
spec:
  type: NodePort
  selector:
    app: nsqlookupd
  ports:
  - protocol: TCP
    port: 4160
    targetPort: 4160
    name: tcp
  - protocol: TCP
    port: 4161
    targetPort: 4161
    name: http
